# python-sdk

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.dockerfiles/linux_aarch64/: Dockerfile
.dockerfiles/linux_coverage/: Dockerfile
.dockerfiles/linux_x86_64/: Dockerfile
cmake/: FindUUID.cmake
core/include/: AsyncWorker.h  BatchTableWriter.h  Compress.h  Concurrent.h  Constant.h  ConstantFactory.h  ConstantImp.h  ConstantMarshall.h  DBConnectionPoolImpl.h  DFSChunkMeta.h  DdbPythonUtil.h  DecimalHelper.h  Dictionary.h  DictionaryImp.h  DolphinDB.h  DolphinDBImp.h  DomainImp.h  EventHandler.h  Exceptions.h  Exports.h  FixSTL.h  Format.h  Guid.h  IOBinding.h  Logger.h  Matrix.h  MultithreadedTableWriter.h  Pickle.h  PybindExtension.h  PytoDdbRowPool.h  ScalarImp.h  Set.h  SetImp.h  SmartPointer.h  Streaming.h  SysIO.h  Table.h  TableImp.h  TaskStatusMgmt.h  TypeConverter.h  (+8 more)
core/src/: AsynWorker.cpp  AsyncWorker.cpp  BatchTableWriter.cpp  Compress.cpp  Concurrent.cpp  ConstantImp.cpp  ConstantMarshall.cpp  DBConnectionPoolImpl.cpp  DdbPythonUtil.cpp  DictionaryImp.cpp  DolphinDB.cpp  DolphinDBImp.cpp  DomainImp.cpp  EventHandler.cpp  Exceptions.cpp  Format.cpp  Guid.cpp  IOBinding.cpp  LZ4.cpp  Logger.cpp  Matrix.cpp  MultithreadedTableWriter.cpp  Pickle.cpp  PickleUnmarshall.cpp  PytoDdbRowPool.cpp  ScalarImp.cpp  Streaming.cpp  SymbolBase.cpp  SysIO.cpp  TableImp.cpp  TaskStatusMgmt.cpp  TypeConverter.cpp  TypeException.cpp  TypeHelper.cpp  Util.cpp  binding.cpp
core/test/: CMakeLists.txt  build.sh
core/test/include/: config.h
core/test/src/: ArrayVectorTest_gtest.cpp  AutoFitTableUpsertTest_gtest.cpp  BatchTableWriter_gtest.cpp  CEPEventTest_gtest.cpp  CompressTest_gtest.cpp  ConstantMarshall_gtest.cpp  Coverage_gtest.cpp  DBConnectionTest_gtest.cpp  DataformDictionaryTest_gtest.cpp  DataformPairTest_gtest.cpp  DataformTableTest_gtest.cpp  DataformVectorTest_gtest.cpp  DdbPythonUtilTest_gtest.cpp  DolphinDBTest_gtest.cpp  MultithreadedTableWriter_gtest.cpp  ScalarTest_gtest.cpp  StreamingDeserilizerTester_gtest.cpp  StreamingPollingClientTester_gtest.cpp  StreamingThreadPooledClientTester_gtest.cpp  StreamingThreadedClientTester_gtest.cpp  config.cpp  gt_main.cpp
dolphindb/: __init__.py  _dolphindbcpp.pyi  _hints.py  appender.py  cep.py  config.py  connection.py  connection_pool.py  database.py  global_config.py  io.py  logger.py  session.py  settings.py  streaming.py  table.py  typing.py  utils.py  vector.py  writer.py
dolphindb/_core/: __init__.py
scripts/: upload_ftp.py
test/: .coveragerc  README.md  build.sh  build_requirements.txt  conftest.py  generate_report.sh  pytest.ini  requirements.txt  rule.txt  test_CEP.py  test_DBConnectionPool.py  test_MultithreadTableWriter.py  test_SimpleDBConnectionPool.py  test_concurrent.py  test_connection.py  test_database.py  test_decimal.py  test_download.py  test_io.py  test_loadTable.py  test_loadText.py  test_logger.py  test_memoryleak.py  test_memoryleak_download.py  test_other.py  test_partitionedTableAppender.py  test_permission.py  test_pickle.py  test_readme_cn.py  test_serialize.py  test_session.py  test_streaming.py  test_subscribe.py  test_subscribe_reverse.py  test_subscribe_streamDeserializer.py  test_table.py  test_table2.py  test_tableAppender.py  test_tableUpsert.py  test_upload.py
test/.dockerfiles/linux_aarch64/: Dockerfile
test/.dockerfiles/linux_x86_64/: Dockerfile
test/PersistStreamingExecutor/: DeserilizerstreamTable_streaming_runner.py  HAstreamTable_streaming_runner.py  NormalstreamTable_streaming_runner.py  README.MD  startSubscribe_py.sh  stopSubscribe_py.sh  subscriber.py
test/basic_testing/: prepare.py  test_download_new.py  test_upload_new.py  utils.py
test/compatibility_testing/release130/: test_DBConnectionPool.py  test_MultithreadTableWriter.py  test_concurrent.py  test_database.py  test_download.py  test_loadTable.py  test_loadText.py  test_partitionedTableAppender.py  test_permission.py  test_readme_cn.py  test_session.py  test_subscribe.py  test_table.py  test_table2.py  test_tableAppender.py  test_tableUpsert.py  test_upload.py
test/compatibility_testing/release130/basic_testing/: prepare.py  test_download_pd2.py  test_upload_pd2.py  utils.py
test/compatibility_testing/release130/pandas2_testing/: prepare.py  test_download_pd2.py  test_upload_pd2.py  utils.py
test/concurrent_testing/: concurrentQuery.py  sqls.txt
test/memoryLeak_testing/: memDataParser.py  test.py  test_memoryleak_download.py
test/pandas2_testing/: prepare.py  test_download_pd2.py  test_upload_pd2.py  utils.py
test/setup/: auto_testing_prepare.py  prepare.py  settings.py  utils.py
