[build-system]
requires = [
    "setuptools>=59",
    "wheel",
    "pybind11==2.12.1; python_version == '3.6'",
    "pybind11==2.13.6; python_version >= '3.7'",
    "numpy==2.0.2; python_version == '3.9'",
    "numpy==2.2.6; python_version >= '3.10'",
]
build-backend = "setuptools.build_meta"

[project]
name = "dolphindb"
dynamic = ["version"]
description = "A C++ boosted DolphinDB Python API based on Pybind11"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "DolphinDB, Inc.", email = "support@dolphindb.com" }
]
license = { text = "DolphinDB" }
requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.18.0",
    "pandas >= 1.0.0, !=1.3.0",
    "future",
    "packaging"
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS"
]

[project.urls]
Homepage = "https://dolphindb.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["dolphindb"]

[tool.setuptools.dynamic]
version = { attr = "dolphindb.__version__" }

[tool.cibuildwheel]
archs = ["auto"]
build-frontend = "default"
config-settings = {}
dependency-versions = "pinned"
environment = {}
environment-pass = []
build-verbosity = 3

skip = ["*-win32", "*-manylinux_i686", "pp*", "*-musllinux*", "*cp314*"]

before-all = ""
before-build = [
    "python --version",
    "python -m pip install --upgrade pip"
]
repair-wheel-command = ""

test-command = ""
before-test = ""
test-requires = []
test-extras = []

container-engine = "docker"

manylinux-x86_64-image = "manylinux2014_x86_64:dolphindb"
manylinux-aarch64-image = "manylinux2014_aarch64:dolphindb"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
before-all = "rm -rf build"
before-build = [
    "python --version",
    "python -m pip config set global.index-url --site http://mirrors.aliyun.com/pypi/simple/",
    "python -m pip config set global.trusted-host mirrors.aliyun.com",
    "python -m pip install --upgrade pip --trusted-host mirrors.aliyun.com"
]

[[tool.cibuildwheel.overrides]]
select = "*-aarch64*"
before-build = [
    "python --version",
    "python -m pip config set global.index-url --site http://mirrors.aliyun.com/pypi/simple/",
    "python -m pip config set global.trusted-host mirrors.aliyun.com",
    "python -m pip install --upgrade pip --trusted-host mirrors.aliyun.com"
]

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
archs = ["x86_64", "arm64"]
before-all = "rm -rf build"
before-build = [
    "python --version",
    "python -m pip config set global.index-url --site http://mirrors.aliyun.com/pypi/simple/",
    "python -m pip config set global.trusted-host mirrors.aliyun.com",
    "pip config list",
    "pip config debug",
    "python -m pip install --upgrade pip --trusted-host mirrors.aliyun.com",
    "python -m pip install --upgrade certifi"
]

[[tool.cibuildwheel.overrides]]
select = "cp*-macosx_x86_64"
environment.MACOSX_DEPLOYMENT_TARGET = "10.13"

[[tool.cibuildwheel.overrides]]
select = "cp*-macosx_arm64"
environment.MACOSX_DEPLOYMENT_TARGET = "11.0"

[tool.cibuildwheel.windows]
before-all = [
    "(if exist build rmdir /s /q build)",
]
before-build = [
    "python --version",
    "python -m pip config set global.index-url --site http://mirrors.aliyun.com/pypi/simple/",
    "python -m pip config set global.trusted-host mirrors.aliyun.com",
    "python -m pip install --upgrade pip --trusted-host mirrors.aliyun.com"
]
