[metadata]
name = dolphindb
version = attr: dolphindb.__version__
author = DolphinDB, Inc.
author_email = support@dolphindb.com
description = A C++ boosted DolphinDB Python API based on Pybind11
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.dolphindb.com
license = DolphinDB
platforms = 
    Windows
    MacOS
    Linux
classifiers = 
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    numpy >= 1.18.0, <=1.24.4
    pandas >= 1.0.0, !=1.3.0
    future
